--- a/src/juicy-tiles-editor-form.html
+++ b/src/juicy-tiles-editor-form.html
@@ -34,6 +34,7 @@
         min-width: 1.45em;
         display: inline-block;
         padding: 0;
+        margin: 0;
         vertical-align: top;
         line-height: 1;
         font-size: 14px;
