Rename `juicy-tiles` to `juicy-tile-list` Juicy/juicy-tile-list#11

--- a/src/juicy-tiles-editor-form.html
+++ b/src/juicy-tiles-editor-form.html
@@ -287,7 +287,7 @@
         innerHTML: null,
         getSortableElement: function (elem) {
           while (elem.parentNode) {
-            if (elem.parentNode.nodeName == 'JUICY-TILES') {
+            if (elem.parentNode.nodeName == 'JUICY-TILE-LIST') {
               return elem;
             }
             elem = elem.parentNode;
