--- a/src/juicy-tile-editor.html
+++ b/src/juicy-tile-editor.html
@@ -1,9 +1,9 @@
 <link rel="import" href="../../polymer/polymer.html">
 <link rel="import" href="../../juicy-highlight/src/juicy-highlight.html">
-<link rel="import" href="juicy-tiles-editor-form.html">
-<link rel="import" href="juicy-tiles-tree.html">
+<link rel="import" href="juicy-tile-editor-form.html">
+<link rel="import" href="juicy-tile-tree.html">
 
-<polymer-element name="juicy-tiles-editor" attributes="selectionMode">
+<polymer-element name="juicy-tile-editor" attributes="selectionMode">
   <template>
     <style>
       .sidebar {
@@ -22,16 +22,16 @@
         margin-left: 10px;
       }
     </style>
-    <juicy-tiles-editor-form selectedItems="{{selectedItems}}" editedTiles="{{editedTiles}}"
-      on-juicy-tiles-editor-revert="{{revertAction}}"
-      on-juicy-tiles-editor-form-tree-changed="{{treeChangedAction}}"></juicy-tiles-editor-form>
+    <juicy-tile-editor-form selectedItems="{{selectedItems}}" editedTiles="{{editedTiles}}"
+      on-juicy-tile-editor-revert="{{revertAction}}"
+      on-juicy-tile-editor-form-tree-changed="{{treeChangedAction}}"></juicy-tile-editor-form>
 
     <div class="sidebar">
       <h1>Elements</h1>
-      <juicy-tiles-tree id="treeView" tree="{{ tree }}"
-        on-juicy-tiles-tree-highlight="{{treeHighlightAction}}"
-        on-juicy-tiles-tree-highlight-extend="{{treeHighlightExtendAction}}"
-        on-juicy-tiles-tree-highlight-remove="{{treeHighlightRemoveAction}}"></juicy-tiles-tree>
+      <juicy-tile-tree id="treeView" tree="{{ tree }}"
+        on-juicy-tile-tree-highlight="{{treeHighlightAction}}"
+        on-juicy-tile-tree-highlight-extend="{{treeHighlightExtendAction}}"
+        on-juicy-tile-tree-highlight-remove="{{treeHighlightRemoveAction}}"></juicy-tile-tree>
     </div>
 
     <juicy-highlight id="elementEdited" overlay strokeWidth="3" strokeColor="#33579F" strokeOffset="3"></juicy-highlight>
@@ -60,7 +60,7 @@
         return children;
       }
 
-      Polymer('juicy-tiles-editor', {
+      Polymer('juicy-tile-editor', {
         selectionMode: false,
         editedElement: null,
         highlightedElement: null,
