--- a/examples/juicy-tiles-grid-editor.html
+++ b/examples/juicy-tiles-grid-editor.html
@@ -73,18 +73,27 @@
     </div>
   </template>
   <juicy-tile-grid id="st1" setup="{{setup}}">
-    <div>Item 0 </div>
+    <div>0</div>
     <div>
-      <button>Item 1</button>
+        <button>1</button>
+        <p><code>heightAdaptive: true</code> - adapt to row-siblings dynamic height change</p>
     </div>
     <div>
-      <input value="Input2">
+      <h4>2</h4>
+        <p>
+            <code>heightDynamic: true</code>Dynamically change height after tile was packed.
+            <button onclick="addMore( this )">Add more content</button>
+            <div id="ieHierarchyRequestErrorWorkaround"></div>
+        </p>
+    </div>
+    <section>
+        <p>3: <code>heightAdaptive: true</code></p>
+    </section>
+    <div>
+        4
     </div>
     <div>
-      Nested tiles 1:
-      <section>
-        Nested tiles 2:
-      </section>
+        5
     </div>
   </juicy-tile-grid>
 </template>
@@ -101,61 +110,78 @@
   model = {
     editingMode: true,
     setup:{
-      gap: 16,
-      items: [
-        {"width": 128, "height": 100, "priority": 0.5, "index": 0},
-        {"width": 512, "height": 100, "priority": 0.48, "gap": 8, 
-        "innerHTML": "<div style=\"background: rgba(191, 81, 236, 0.5); position: relative; top: -8px; left: -8px; height: calc(100% + 2 * 8px ); width: calc(100% + 2 * 8px ); font-size: 100px;\"><marquee title=\"old school test\">☃</marquee></div>",
-        "items":[
-          {"width": 256, "height": 100, "priority": 0.7, "index": 1},
-          {"width": 128, "height": 100, "priority": 0.0, "index": 2}
-        ]},
-        {"width": 256, "height": 256, "priority": 0.47, "index": 3}
-      ]
-    },
-    setup2: {
-      gap: 4,
-      items: [
-        // 011
-        // 233
-        // 2
-        // prioritized
-        //
-        // 110
-        // 233
-        // 2
+      "gap": 25,
+      "items": [
         {
-          index:0,
-          priority:0.9,// 0.6,
-          height: 20,
-          width: 100
+          "index": 0,
+          "priority": 0.9,
+          "height": 50,
+          "width": 200
         },
         {
-          index:1,
-          priority:0.8,// 0.9,
-          height: 20,
-          width: 100
+          "index": 1,
+          "priority": 0.8,
+          "height": 100,
+          "width": 200,
+          "heightAdaptive": true
         },
         {
-          index:2,
-          priority:0.6,// 0.3,
-          height: 40,
-          width: 180
+          "index": 2,
+          "priority": 0.7,
+          "height": 100,
+          "width": 200,
+          "heightDynamic": true
         },
         {
-          index:3,
-          priority:0.4,
-          height: 20,
-          width: 150
+          "index": 3,
+          "priority": 0.6,
+          "height": 50,
+          "width": 200,
+          "heightAdaptive": true
+        },
+        {
+          "name": "virtual group",
+          "priority": 0.5,
+          "gap": 10,
+          "height": 100,
+          "width": 400,
+          "innerHTML": "<div style=\"background: rgba(191, 81, 236, 0.5); position: relative; top: -8px; left: -8px; height: calc(100% + 2 * 8px ); width: calc(100% + 2 * 8px ); font-size: 100px;\"><marquee title=\"old school test\">☃</marquee></div>",
+          "items": [
+              {
+                "index": 4,
+                "priority": 0.7,
+                "height": 100,
+                "width": 195
+              },
+              {
+                "index": 5,
+                "priority": 0.6,
+                "height": 50,
+                "width": 195
+              }
+          ]
         }
-      ]
+      ],
+      "name": "root",
+      "width": 553.5,
+      "heightAuto": true
     }
   };
   document.addEventListener("polymer-ready", function(){
     document.querySelector("template").bindingDelegate = new PolymerExpressions();
     document.querySelector("template").model = model;
 
-  })
+  });
+
+
+  addMore = function( button ){
+      // var newOne = button.ownerDocument.createElement("div");
+      // newOne.innerHTML = "<p><code>&lt;juicy-tile-grid&gt;</code> uses native CSS Grid to adapt to changes</p>";
+      // button.parentNode.appendChild( newOne );
+      // With !<3 to IE
+      document.getElementById("ieHierarchyRequestErrorWorkaround").innerHTML += 
+          "<p><code>&lt;juicy-tile-grid&gt;</code> uses native CSS Grid to adapt to changes</p>";
+  };
 </script>
 
 
