--- a/examples/juicy-tiles-grid-editor.html
+++ b/examples/juicy-tiles-grid-editor.html
@@ -23,9 +23,11 @@
     juicy-tile-grid{
       /*width: 300px;
       height: 150px;*/
-      margin: 2em 0 2em 200px;
       display: block;
       box-shadow:     inset 0px 0px 10px 0px rgba(50, 50, 50, 0.6);
+    }
+    body>juicy-tile-grid{
+      margin: 2em 0 2em 200px;
     }
     juicy-tile-grid>*{
       box-shadow:         0px 0px 10px 0px rgba(50, 50, 50, 0.75);
@@ -95,6 +97,43 @@
     <div>
         5
     </div>
+    <div>
+      <h4>6</h4>
+      Nested tiles 1:
+      <juicy-tile-grid setup="{{setup2}}">
+        <div>Subitem 0 </div>
+        <div>
+          <button>Subitem 1</button>
+        </div>
+        <div>
+          <input value="Subitem2">
+        </div>
+        <section>Subitem 3</section>
+      </juicy-tile-grid>
+      <section>
+        Nested tiles 2:
+        <juicy-tile-grid setup="{{setup2}}">
+          <div>Subitem 0 </div>
+          <div>
+            <button>Subitem 1</button>
+          </div>
+          <div>
+            <input value="Subitem2">
+          </div>
+          <section>Subitem 3</section>
+        </juicy-tile-grid>
+      </section>
+    </div>
+    <juicy-tile-grid setup="{{setup2}}">
+      <div>Subitem 0 </div>
+      <div>
+        <button>Subitem 1</button>
+      </div>
+      <div>
+        <input value="Subitem2">
+      </div>
+      <section>Subitem 3</section>
+    </juicy-tile-grid>
   </juicy-tile-grid>
 </template>
 <script type="text/javascript">
@@ -160,11 +199,60 @@
                 "width": 195
               }
           ]
+        },
+        {
+          "index": 6,
+          "priority": 0.5,
+          "height": 150,
+          "width": 400
+        },
+        {
+          "index": 7,
+          "priority": 0.4,
+          "height": 150,
+          "width": 350
         }
       ],
       "name": "root",
       "width": 553.5,
       "heightAuto": true
+    },
+    setup2: {
+      gap: 4,
+      items: [
+        // 011
+        // 233
+        // 2
+        // prioritized
+        //
+        // 110
+        // 233
+        // 2
+        {
+          index:0,
+          priority:0.9,// 0.6,
+          height: 20,
+          width: 100
+        },
+        {
+          index:1,
+          priority:0.8,// 0.9,
+          height: 20,
+          width: 100
+        },
+        {
+          index:2,
+          priority:0.6,// 0.3,
+          height: 40,
+          width: 180
+        },
+        {
+          index:3,
+          priority:0.4,
+          height: 20,
+          width: 150
+        }
+      ]
     }
   };
   document.addEventListener("polymer-ready", function(){
