Remove unused attribute

--- a/examples/bugFromLauncher.html
+++ b/examples/bugFromLauncher.html
@@ -77,7 +77,7 @@ juicy-jsoneditor{
   <label><input type="checkbox" checked="{{editingMode}}"> Show editor ({{editingMode}})</label>
   <template if="{{editingMode}}">
     <div id="aboveOverlay">
-      <juicy-tile-editor selectionMode watchedTagNames="['JUICY-TILE-LIST', 'JUICY-TILE-GRID']"></juicy-tile-editor>
+      <juicy-tile-editor selectionMode></juicy-tile-editor>
     </div>
   </template>
 
