--- a/examples/juicy-tiles-grid-editor.html
+++ b/examples/juicy-tiles-grid-editor.html
@@ -71,7 +71,7 @@
   <label><input type="checkbox" checked="{{editingMode}}"> Show editor ({{editingMode}})</label>
   <template if="{{editingMode}}">
     <div id="aboveOverlay">
-      <juicy-tile-editor selectionMode watchedTagNames="['JUICY-TILE-LIST', 'JUICY-TILE-GRID']"></juicy-tile-editor>
+      <juicy-tile-editor selectionMode></juicy-tile-editor>
     </div>
   </template>
   <juicy-tile-grid id="st1" setup="{{setup}}">
