--- a/src/juicy-tile-editor.html
+++ b/src/juicy-tile-editor.html
@@ -3,7 +3,7 @@
 <link rel="import" href="juicy-tile-editor-form.html">
 <link rel="import" href="juicy-tile-tree.html">
 
-<polymer-element name="juicy-tile-editor" attributes="selectionMode watchedTagNames">
+<polymer-element name="juicy-tile-editor" attributes="selectionMode">
   <template>
     <style>
       .sidebar {
