Rename gap to gutter (Juicy/juicy-tile-list#19)

--- a/examples/juicy-tiles-grid-editor.html
+++ b/examples/juicy-tiles-grid-editor.html
@@ -157,7 +157,7 @@ allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></
   model = {
     editingMode: true,
     setup:{
-      "gap": 25,
+      "gutter": 25,
       "items": [
         {
           "index": 0,
@@ -189,7 +189,7 @@ allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></
         {
           "name": "virtual group",
           "priority": 0.5,
-          "gap": 10,
+          "gutter": 10,
           "height": 100,
           "width": 400,
           "innerHTML": "<div style=\"background: rgba(191, 81, 236, 0.5); position: relative; top: -8px; left: -8px; height: calc(100% + 2 * 8px ); width: calc(100% + 2 * 8px ); font-size: 100px;\"><marquee title=\"old school test\">☃</marquee></div>",
@@ -226,7 +226,7 @@ allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></
       "heightAuto": true
     },
     setup2: {
-      gap: 4,
+      gutter: 4,
       items: [
         // 011
         // 233
