--- a/src/juicy-tile-tree.html
+++ b/src/juicy-tile-tree.html
@@ -1,11 +1,20 @@
 <link rel="import" href="../../polymer/polymer.html">
+<link rel="import" href="../../core-icon/core-icon.html">
+<link rel="import" href="../../core-icon-button/core-icon-button.html">
+<link rel="import" href="juicy-toggle-icon-button.html">
+  <!-- load default set -->
+  <link rel="import" href="../../core-icons/core-icons.html">
 
 <polymer-element name="juicy-tile-tree" attributes="tree">
   <template>
     <style>
       ul {
         list-style: none;
-        padding: 0 0 0 20px;
+        padding: 0 0 0 calc( 1em + 3px );
+      }
+
+      #root{
+        padding: 0;
       }
 
       li span {
@@ -17,13 +26,39 @@
         background-color: blue;
         color: white;
       }
-    </style>
 
+      core-icon-button, juicy-toggle-icon-button {
+        /*padding: 1px 1px 1px 1px;*/
+        margin: 1px;
+        line-height: 1em;
+      }
+      core-icon[role=img]{
+        height: 1em;
+        width: 1em;
+        padding: 1px;
+
+      }
+      juicy-toggle-icon-button /deep/ core-icon[role=img]{
+        height: 1em;
+        width: 1em;
+        /*padding: 1px;
+        margin: 1px;*/
+      }
+
+      .expand[checked] ~ ul {
+        display: none;
+      }
+
+      .blurred{
+        opacity: 0.5;
+      }
+    </style>
     <ul id="root" on-mousedown="{{preventTextSelection}}">
       <template repeat="{{ tree as branch }}" id="recursive">
         <!-- branch -->
         <li>
-          <span on-tap="{{tapAction}}" class="{{ branch | getBranchClassName }}">⌗ {{ {node: branch.node}  | toDisplayName }} ▾</span>
+          <juicy-toggle-icon-button class="expand" on-tap="{{ expandNode(branch) }}" iconOn="chevron-right" iconOff="expand-more"></juicy-toggle-icon-button
+          ><span on-tap="{{tapAction}}" class="{{ branch | getBranchClassName }}"><core-icon icon="view-quilt" title="juicy-tile-list"><!-- <core-icon icon="dashboard" title="juicy-tile-list"> --></core-icon>{{ {node: branch.node}  | toDisplayName }}</span>
 
           <ul class="branch">
             <template repeat="{{ branch.node.setup.items as item }}" id="item">
@@ -31,7 +66,11 @@
               <li>
                 <template if="{{ item.items }}">
                   <!-- group -->
-                  <span on-tap="{{tapAction}}" class="{{ item | getBranchClassName }}">⊕ {{ {node: branch.node, item: item} | toDisplayName }} ▾</span>
+                  
+                  <juicy-toggle-icon-button class="expand" on-tap="{{ expandNode(item) }}" iconOn="chevron-right" iconOff="expand-more"></juicy-toggle-icon-button
+                  ><juicy-toggle-icon-button on-tap="{{ refreshTiles }}" iconOff="visibility" iconOn="visibility-off" checked="{{item.hidden}}"></juicy-toggle-icon-button
+                  ><span on-tap="{{tapAction}}" class="{{ item | getBranchClassName }}"
+                    ><core-icon icon="folder" title="group"></core-icon> {{ {node: branch.node, item: item} | toDisplayName }}</span>
 
                   <ul class="group">
                     <template repeat="{{ item.items as item }}" ref="item"></template>
@@ -40,16 +79,18 @@
 
                 <template if="{{ !item.items }}" id="element">
                   <!-- real element -->
-
+                  
                   <template if="{{ !branch.branches[ item.index ] }}">
                     <!-- without nested juicy-tile-list -->
-
-                    <span on-tap="{{tapAction}}" class="{{ item | getBranchClassName }}">{{ {node: branch.node, item: item} | toDisplayName }}</span>
+                    <core-icon class="blurred" icon="remove" title="tile"></core-icon
+                    ><juicy-toggle-icon-button on-tap="{{ refreshTiles }}" iconOff="visibility" iconOn="visibility-off" checked="{{item.hidden}}"></juicy-toggle-icon-button
+                    ><span on-tap="{{tapAction}}" class="{{ item | getBranchClassName }}">{{ {node: branch.node, item: item} | toDisplayName }}</span>
                   </template>
                   <template if="{{ branch.branches[ item.index ] }}">
                     <!-- with nested juicy-tile-list -->
-                    <span on-tap="{{tapAction}}" class="{{ item | getBranchClassName }}">⊛ {{ {node: branch.node, item: item} | toDisplayName }} ▾</span>
-
+                  <juicy-toggle-icon-button class="expand" on-tap="{{ expandNode(item) }}" iconOn="chevron-right" iconOff="expand-more"></juicy-toggle-icon-button
+                  ><juicy-toggle-icon-button on-tap="{{ refreshTiles }}" iconOff="visibility" iconOn="visibility-off" checked="{{item.hidden}}"></juicy-toggle-icon-button
+                  ><span on-tap="{{tapAction}}" class="{{ item | getBranchClassName }}">⊛<!-- contains juicy-tile-list inside -->{{ {node: branch.node, item: item} | toDisplayName }}</span>
                     <ul class="group">
                       <template repeat="{{ branch.branches[ item.index ] as branch }}" ref="recursive"></template>
                     </ul>
