--- a/src/juicy-tile-tree.html
+++ b/src/juicy-tile-tree.html
@@ -80,19 +80,19 @@
                 <template if="{{ !item.items }}" id="element">
                   <!-- real element -->
                   
-                  <template if="{{ !branch.branches[ item.index ] }}">
+                  <template if="{{ !branch.branches[ item.id ] }}">
                     <!-- without nested juicy-tile-list -->
                     <core-icon class="blurred" icon="remove" title="tile"></core-icon
                     ><juicy-toggle-icon-button on-tap="{{ refreshTiles }}" iconOff="visibility" iconOn="visibility-off" checked="{{item.hidden}}"></juicy-toggle-icon-button
                     ><span on-tap="{{tapAction}}" class="{{ item | getBranchClassName }}">{{ {node: branch.node, item: item} | toDisplayName }}</span>
                   </template>
-                  <template if="{{ branch.branches[ item.index ] }}">
+                  <template if="{{ branch.branches[ item.id ] }}">
                     <!-- with nested juicy-tile-list -->
                   <juicy-toggle-icon-button class="expand" on-tap="{{ expandNode(item) }}" iconOn="chevron-right" iconOff="expand-more"></juicy-toggle-icon-button
                   ><juicy-toggle-icon-button on-tap="{{ refreshTiles }}" iconOff="visibility" iconOn="visibility-off" checked="{{item.hidden}}"></juicy-toggle-icon-button
                   ><span on-tap="{{tapAction}}" class="{{ item | getBranchClassName }}">⊛<!-- contains juicy-tile-list inside -->{{ {node: branch.node, item: item} | toDisplayName }}</span>
                     <ul class="group">
-                      <template repeat="{{ branch.branches[ item.index ] as branch }}" ref="recursive"></template>
+                      <template repeat="{{ branch.branches[ item.id ] as branch }}" ref="recursive"></template>
                     </ul>
                   </template>
                 </template>
