Refresh all tile lists when tile gets hidden - fix for Polyjuice/Launcher#113

--- a/src/juicy-tile-editor.html
+++ b/src/juicy-tile-editor.html
@@ -34,7 +34,7 @@
         on-juicy-tile-tree-highlight="{{treeHighlightAction}}"
         on-juicy-tile-tree-highlight-extend="{{treeHighlightExtendAction}}"
         on-juicy-tile-tree-highlight-remove="{{treeHighlightRemoveAction}}"
-        on-juicy-tile-tree-refresh-tiles="{{refreshTiles}}"></juicy-tile-tree>
+        on-juicy-tile-tree-refresh-tile-list="{{refreshTileList}}"></juicy-tile-tree>
     </div>
 
     <juicy-highlight id="tileEdited" overlay strokeWidth="3" strokeColor="#33579F" strokeOffset="3"></juicy-highlight>
