--- a/examples/lightweight.html
+++ b/examples/lightweight.html
@@ -86,7 +86,7 @@ allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></
   <!-- <juicy-tiles-setup-sync storedValue="{{setup}}"></juicy-tiles-setup-sync> -->
   <juicy-tile-list 
     id="st1" 
-    setup="{&quot;gutter&quot;:16,&quot;items&quot;:[{&quot;width&quot;:128,&quot;height&quot;:100,&quot;priority&quot;:0.5,&quot;index&quot;:0},{&quot;width&quot;:512,&quot;height&quot;:100,&quot;priority&quot;:0.48,&quot;gutter&quot;:8,&quot;innerHTML&quot;:&quot;<div style=\&quot;background: rgba(191, 81, 236, 0.5); position: relative; top: -8px; left: -8px; height: calc(100% + 2 * 8px ); width: calc(100% + 2 * 8px ); font-size: 100px;\&quot;><marquee title=\&quot;old school test\&quot;>☃</marquee></div>&quot;,&quot;items&quot;:[{&quot;width&quot;:256,&quot;height&quot;:100,&quot;priority&quot;:0.7,&quot;index&quot;:1},{&quot;width&quot;:128,&quot;height&quot;:100,&quot;priority&quot;:0,&quot;index&quot;:2}]},{&quot;width&quot;:256,&quot;height&quot;:256,&quot;priority&quot;:0.47,&quot;index&quot;:3}]}"
+    setup="{&quot;gutter&quot;:16,&quot;items&quot;:[{&quot;width&quot;:128,&quot;height&quot;:100,&quot;priority&quot;:0.5,&quot;id&quot;:0},{&quot;width&quot;:512,&quot;height&quot;:100,&quot;priority&quot;:0.48,&quot;gutter&quot;:8,&quot;innerHTML&quot;:&quot;<div style=\&quot;background: rgba(191, 81, 236, 0.5); position: relative; top: -8px; left: -8px; height: calc(100% + 2 * 8px ); width: calc(100% + 2 * 8px ); font-size: 100px;\&quot;><marquee title=\&quot;old school test\&quot;>☃</marquee></div>&quot;,&quot;items&quot;:[{&quot;width&quot;:256,&quot;height&quot;:100,&quot;priority&quot;:0.7,&quot;id&quot;:1},{&quot;width&quot;:128,&quot;height&quot;:100,&quot;priority&quot;:0,&quot;id&quot;:2}]},{&quot;width&quot;:256,&quot;height&quot;:256,&quot;priority&quot;:0.47,&quot;id&quot;:3}]}"
     model>
     <div>Item 0 </div>
     <div>
@@ -98,7 +98,7 @@ allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></
     <div>
       Nested tiles 1:
       <juicy-tile-list 
-        setup="{&quot;gutter&quot;:4,&quot;items&quot;:[{&quot;index&quot;:0,&quot;priority&quot;:0.9,&quot;height&quot;:20,&quot;width&quot;:100},{&quot;index&quot;:1,&quot;priority&quot;:0.8,&quot;height&quot;:20,&quot;width&quot;:100},{&quot;index&quot;:2,&quot;priority&quot;:0.6,&quot;height&quot;:40,&quot;width&quot;:180},{&quot;index&quot;:3,&quot;priority&quot;:0.4,&quot;height&quot;:20,&quot;width&quot;:150}]}"
+        setup="{&quot;gutter&quot;:4,&quot;items&quot;:[{&quot;id&quot;:0,&quot;priority&quot;:0.9,&quot;height&quot;:20,&quot;width&quot;:100},{&quot;id&quot;:1,&quot;priority&quot;:0.8,&quot;height&quot;:20,&quot;width&quot;:100},{&quot;id&quot;:2,&quot;priority&quot;:0.6,&quot;height&quot;:40,&quot;width&quot;:180},{&quot;id&quot;:3,&quot;priority&quot;:0.4,&quot;height&quot;:20,&quot;width&quot;:150}]}"
         >
         <div>Subitem 0 </div>
         <div>
@@ -112,7 +112,7 @@ allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></
       <section>
         Nested tiles 2:
         <juicy-tile-list 
-          setup="{&quot;gutter&quot;:4,&quot;items&quot;:[{&quot;index&quot;:0,&quot;priority&quot;:0.9,&quot;height&quot;:20,&quot;width&quot;:100},{&quot;index&quot;:1,&quot;priority&quot;:0.8,&quot;height&quot;:20,&quot;width&quot;:100},{&quot;index&quot;:2,&quot;priority&quot;:0.6,&quot;height&quot;:40,&quot;width&quot;:180},{&quot;index&quot;:3,&quot;priority&quot;:0.4,&quot;height&quot;:20,&quot;width&quot;:150}]}"
+          setup="{&quot;gutter&quot;:4,&quot;items&quot;:[{&quot;id&quot;:0,&quot;priority&quot;:0.9,&quot;height&quot;:20,&quot;width&quot;:100},{&quot;id&quot;:1,&quot;priority&quot;:0.8,&quot;height&quot;:20,&quot;width&quot;:100},{&quot;id&quot;:2,&quot;priority&quot;:0.6,&quot;height&quot;:40,&quot;width&quot;:180},{&quot;id&quot;:3,&quot;priority&quot;:0.4,&quot;height&quot;:20,&quot;width&quot;:150}]}"
           >
           <div>Subitem 0 </div>
           <div>
@@ -126,7 +126,7 @@ allowtransparency="true" frameborder="0" scrolling="0" width="90" height="30"></
       </section>
     </div>
     <juicy-tile-list 
-      setup="{&quot;gutter&quot;:4,&quot;items&quot;:[{&quot;index&quot;:0,&quot;priority&quot;:0.9,&quot;height&quot;:20,&quot;width&quot;:100},{&quot;index&quot;:1,&quot;priority&quot;:0.8,&quot;height&quot;:20,&quot;width&quot;:100},{&quot;index&quot;:2,&quot;priority&quot;:0.6,&quot;height&quot;:40,&quot;width&quot;:180},{&quot;index&quot;:3,&quot;priority&quot;:0.4,&quot;height&quot;:20,&quot;width&quot;:150}]}"
+      setup="{&quot;gutter&quot;:4,&quot;items&quot;:[{&quot;id&quot;:0,&quot;priority&quot;:0.9,&quot;height&quot;:20,&quot;width&quot;:100},{&quot;id&quot;:1,&quot;priority&quot;:0.8,&quot;height&quot;:20,&quot;width&quot;:100},{&quot;id&quot;:2,&quot;priority&quot;:0.6,&quot;height&quot;:40,&quot;width&quot;:180},{&quot;id&quot;:3,&quot;priority&quot;:0.4,&quot;height&quot;:20,&quot;width&quot;:150}]}"
       >
       <div>Subitem 0 </div>
       <div>
